@@ -7,25 +7,27 @@ this repository contains the full copyright notices and license terms. -->
     <label name="active"/>
     <field name="active" xexpand="0" width="100"/>
     <notebook colspan="4">
-        <page string="General" id="general" col="6">
+        <page string="General" id="general">
             <label name="res_model"/>
             <field name="res_model"/>
+            <label name="context_model"/>
+            <field name="context_model"/>
             <label name="usage"/>
             <field name="usage"/>
             <label name="icon"/>
             <field name="icon"/>
-            <field name="act_window_views" colspan="6"
+            <field name="act_window_views" colspan="4"
                 view_ids="ir.act_window_view_view_list2"/>
-            <field name="act_window_domains" colspan="6"
+            <field name="act_window_domains" colspan="4"
                 view_ids="ir.act_window_domain_view_list2"/>
             <label name="domain"/>
-            <field name="domain" colspan="5"/>
+            <field name="domain" colspan="3"/>
             <label name="context"/>
-            <field name="context" colspan="5"/>
+            <field name="context" colspan="3"/>
             <label name="order"/>
-            <field name="order" colspan="5"/>
+            <field name="order" colspan="3"/>
             <label name="search_value"/>
-            <field name="search_value" colspan="5"/>
+            <field name="search_value" colspan="3"/>
             <label name="limit"/>
             <field name="limit"/>
             <label name="window_name"/>
